--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 		</section>
 	</main>
 
+	<a href="https://rainer-ahi-portfolio.vercel.app/" class="button version-3d"> <span class="border"></span> <span class="label">3D version</span> <span class="label-hover"> <span class="inner">3D version</span> </span> </a>
+
 	<script src="src/index.ts" type="module"></script>
 </body>
 
