New project added

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
 							<span class="inner">Balloon Portfolio</span>
 						</span>
 					</a>
-					<a class="button" target="_blank">
+					<a class="button" href="https://prime-product-showcase.vercel.app/" target="_blank">
 						<span class="border"></span>
-						<span class="label">Coming soon</span>
+						<span class="label">Prime Product Showcase</span>
 						<span class="label-hover">
-							<span class="inner">Coming soon</span>
+							<span class="inner">Prime Product Showcase</span>
 						</span>
 					</a>
 					<a class="button"  target="_blank">
